final contrast correction push

--- a/portfolio_site/styles/style.css
+++ b/portfolio_site/styles/style.css
@@ -68,7 +68,7 @@ nav a:hover{
 }
 
 .hero-msg{
-    color: #211924;
+    color: #1f1822;
     font-family: "Slackside One","Bradley Hand", "sans-serif";
     font-size: 3em;
     margin-top: 10px;
